recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:7: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:8: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:9: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:10: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:11: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:12: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^FourSquare:13: error: too many arguments for method avance: (x$1: Double)Unit
	avance(100,0)
              ^FourSquare:14: error: too many arguments for method gauche: (x$1: Double)Unit
	gauche(90,0)
              ^