recursion.lessons.recursion.square.FourSquare.scala.code
override def run() {
	avance(100)
}


def carre(){
	avance(100,0)
	gauche(90,0)
	avance(100,0)
	gauche(90,0)
	avance(100,0)
	gauche(90,0)
	avance(100,0)
	gauche(90,0)
	
}
